--- a/source/css/_var.styl
+++ b/source/css/_var.styl
@@ -6,8 +6,8 @@ $base-font-color = #555
 $base-line-height = 1.5
 $base-font-family = 'Helvetica Neue', 'Hiragino Sans GB', 'WenQuanYi Micro Hei', 'Microsoft Yahei', sans-serif
 $base-code-font-family = 'Source Code Pro', Consolas, 'Liberation Mono', Courier, monospace, serif
-$base-link-color = #258fb8
-$base-link-color-hover = #258fb8
+$base-link-color = #DB7093
+$base-link-color-hover = #DB7093
 
 $border-color = #f0f0f0
 
@@ -41,7 +41,7 @@ $color-green-hover = #40afaf
 $padding-left-right = 50px
 $margin-left-right = 50px
 
-$html-bg-color = #fff
-$content-bg-color = #fff
+$html-bg-color = #FFC0CB
+$content-bg-color = #FFFFFF
 
 // $global-padding: 60px
