--- a/source/css/partial/_post.styl
+++ b/source/css/partial/_post.styl
@@ -55,7 +55,7 @@
     transition: all .3s
 
     &:hover
-      color: #9c396b
+      color: #C71585
       text-shadow: 1px 1px 1px #ddd
 
 .post__image
@@ -118,7 +118,7 @@
 
 .post__foot-link
   padding: 10px 15px 10px 0
-  color: #3CB371
+  color: #FF69B4
   font-size-rem(14)
 
 .post__tag__item
@@ -130,7 +130,7 @@
   display: block
 
   &:hover
-    color: #9c396b
+    color: #C71585
 
   &:before
     content: "#"
