--- a/layout/plugins/livere.pug
+++ b/layout/plugins/livere.pug
@@ -1,4 +1,4 @@
-if theme.livere_uid
+if theme.livere_uid && page.comments
   div.comments#lv-container(data-id = theme.livere_id, data-uid = theme.livere_uid)
     script.
       (function(d, s) {var j, e = d.getElementsByTagName(s)[0];if (typeof LivereTower === 'function') { return; } j = d.createElement(s);j.src = 'https://cdn-city.livere.com/js/embed.dist.js';j.async = true;e.parentNode.insertBefore(j, e);})(document, 'script');
