--- a/source/css/partial/_main.styl
+++ b/source/css/partial/_main.styl
@@ -23,19 +23,20 @@
   left: 0
   right: 0
   width: 100%
+  background-color: #FFB6C1
   // z-index: -1
 
 .head
 .main
 .foot
   margin: 0 auto
-  width: 700px
+  width: 800px
 
 .head
 .foot
   padding: 0 50px
   height: 120px
-  background-color: #399c9c
+  background-color: #D60036
   line-height: (@height)
   box-sizing: border-box
 
@@ -70,8 +71,8 @@
   font-weight: normal
 
 .comments
-  margin: 30px 0
-  padding: 50px
+  margin: 10px 0
+  padding: 10px
   background-color: #FFFFFF
   border: 1px solid $border-color
 
@@ -108,7 +109,7 @@
 /* 定义滑块的内阴影+圆角 */
 ::-webkit-scrollbar-thumb {
   -webkit-box-shadow: inset 0 0 8px rgba(0, 0, 0, .3);
-  background-color: $color-green;
+  background-color: #D60036;
 }
 
 .right p
