add disqus support,adjust code display,add some variable in config.yml

--- a/source/css/partial/_post.styl
+++ b/source/css/partial/_post.styl
@@ -77,8 +77,8 @@
      box-shadow: 0 0 1px #ccc
 
   .highlight
-    margin: 1.6em -60px
-    padding: 15px
+    margin: 1em -10px
+    padding: 0px
 
     figcaption
       padding: 0 45px
@@ -118,7 +118,7 @@
 
 .post__foot-link
   padding: 10px 15px 10px 0
-  color: #FF69B4
+  color: $base-link-color
   font-size-rem(14)
 
 .post__tag__item
@@ -130,7 +130,7 @@
   display: block
 
   &:hover
-    color: #C71585
+    color: $base-link-color-hover
 
   &:before
     content: "#"
