--- a/layout/views/head.pug
+++ b/layout/views/head.pug
@@ -14,6 +14,9 @@ if config.keywords
 if config.description
   meta(name='description', content = config.description)
 
+if theme.theme_color
+  meta(name='theme-color', content = theme.theme_color)
+
 if theme.rss
   link(rel='alternative', href = theme.rss, title = config.title, type='application/atom+xml')
 
