--- a/source/css/_var.styl
+++ b/source/css/_var.styl
@@ -6,28 +6,28 @@ $base-font-color = #555
 $base-line-height = 1.5
 $base-font-family = 'Helvetica Neue', 'Hiragino Sans GB', 'WenQuanYi Micro Hei', 'Microsoft Yahei', sans-serif
 $base-code-font-family = 'Source Code Pro', Consolas, 'Liberation Mono', Courier, monospace, serif
-$base-link-color = #DB7093
-$base-link-color-hover = #DB7093
+$base-link-color = convert(hexo-config('link_color'))
+$base-link-color-hover = convert(hexo-config('link_color_hover'))
 
 $border-color = #f0f0f0
 
 $background-color = #fcfcfc
 
 // General colors
-$highlight-foreground = #399c9c
-$highlight-background =  #f8f8f8
-$highlight-comment = #b0bec5
-$highlight-title = #399c9c
+$highlight-foreground = #ffffff
+$highlight-background =  #000000
+$highlight-comment = #999999
+$highlight-title = $highlight-comment
 
 // Code Color
 // $highlight-background = #473D41
-// $highlight-current-line = #393939
+$highlight-current-line = #393939
 $highlight-selection = #c5c8c6
 // $highlight-foreground = #81a2be
 // $highlight-comment = #999999
 
 $highlight-func-keyword = #80cbc4
-// $highlight-red = #91ba61
+$highlight-red = #91ba61
 $highlight-orange = #ff5370
 $highlight-yellow = #ffcc66
 $highlight-green = #91ba61
@@ -41,7 +41,13 @@ $color-green-hover = #40afaf
 $padding-left-right = 50px
 $margin-left-right = 50px
 
-$html-bg-color = #FFC0CB
+$html-bg-color = convert(hexo-config('background_color'))
 $content-bg-color = #FFFFFF
+
+$theme_color = convert(hexo-config('theme_color'))
+
+$line-numbers
+  color: #FFFAFA
+  font-size: 1em
 
 // $global-padding: 60px
