--- a/source/css/partial/_main.styl
+++ b/source/css/partial/_main.styl
@@ -23,7 +23,7 @@
   left: 0
   right: 0
   width: 100%
-  background-color: #FFB6C1
+  background-color: $html-bg-color
   // z-index: -1
 
 .head
@@ -36,7 +36,7 @@
 .foot
   padding: 0 50px
   height: 120px
-  background-color: #D60036
+  background-color: $theme_color
   line-height: (@height)
   box-sizing: border-box
 
@@ -82,7 +82,7 @@
 .foot-copy
   text-align: center
   color: #fff
-  font-size-rem(12)
+  font-size-rem(15)
 
 .page-menu__item
   display: inline-block
@@ -109,7 +109,7 @@
 /* 定义滑块的内阴影+圆角 */
 ::-webkit-scrollbar-thumb {
   -webkit-box-shadow: inset 0 0 8px rgba(0, 0, 0, .3);
-  background-color: #D60036;
+  background-color: $theme_color;
 }
 
 .right p
